# playthrough-bot

./: .gitignore  LICENSE  README.md  alembic.ini  bot.py  db_setup.py  example_config.py  playthrough.db  pyproject.toml  pytest.ini  scripts.py
modules/: admin.py  channel.py  game.py  help.py  roles.py
src/playthrough-bot/: config.py  consts.py
src/playthrough-bot/discord/: main.py  utils.py
src/playthrough-bot/discord/modules/: admin.py  channel.py
src/playthrough-bot/models/: __init__.py  models.py  utils.py
src/playthrough-bot/models/alembic/: env.py
src/playthrough-bot/models/alembic/versions/: c38e71db493b_init.py
tests/models/: conftest.py  test_models.py  test_utils.py
