[tool.poetry]
name = "playthrough-bot"
version = "0.1.0"
description = ""
authors = ["Rain <Rain#8710>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
discord = "^1.0.1"
psycopg2 = { version = "^2.8.4", optional = true }
mysqlclient = { version = "^1.4.6", optional = true }
click = "^7.0"
inquirer = "^2.6.3"
sqlalchemy = "^1.3.11"
alembic = "^1.3.1"

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2"]

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
black = "^19.10b0"
flake8 = "^3.7.9"

[tool.poetry.scripts]
config = "scripts:config"
start = "scripts:start"
test = "scripts:test"
makemigration = "scripts:makemigration"
migrate = "scripts:migrate"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
